Pass buildRunId properly
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,6 +92,7 @@ jobs:
           runnerArch: "amd64"
           quayUser: ${{ secrets.QUAY_USER }}
           quayPass: ${{ secrets.QUAY_PASS }}
+          buildRunId: ${{ inputs.sourceBuildRunId }}
 
   # Publish Helm Chart as OCI artifact
   publish-helm-chart:
