--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,36 @@ jobs:
           centralUsername: ${{ secrets.CENTRAL_USERNAME }}
           centralPassword: ${{ secrets.CENTRAL_PASSWORD }}
 
+  # Push Java artifacts to GHCR for long-term storage (for CVE rebuilds)
+  push-java-artifacts-to-ghcr:
+    name: Push Java artifacts to GHCR
+    needs: prepare-release-artifacts
+    if: ${{ startsWith(github.ref, 'refs/heads/release-') }}
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup ORAS
+        uses: oras-project/setup-oras@v1
+
+      - name: Download strimzi binaries from source build
+        uses: actions/download-artifact@v4
+        with:
+          name: strimzi-binaries.tar
+          run-id: ${{ inputs.sourceBuildRunId }}
+          github-token: ${{ github.token }}
+
+      - name: Login to GHCR
+        run: echo "${{ github.token }}" | oras login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Push Java artifacts to GHCR
+        run: |
+          TAG="${{ inputs.releaseVersion }}-${{ inputs.releaseSuffix }}-${{ inputs.sourceBuildRunId }}"
+          oras push ghcr.io/${{ github.repository }}/strimzi-binaries:${TAG} \
+            strimzi-binaries.tar:application/x-tar
+
   # Push containers with suffix (e.g., 0.49.0-0) - optional step
   push-containers-with-suffix:
     name: Push Containers (${{ inputs.releaseVersion }}-${{ inputs.releaseSuffix }})
