--- a/systemtest/src/test/resources/oauth2/postgres.yaml
+++ b/systemtest/src/test/resources/oauth2/postgres.yaml
@@ -6,7 +6,7 @@ data:
   POSTGRES_DB: keycloak
   POSTGRES_USER: arnost
   POSTGRES_PASSWORD: changeme
-  PGDATA: /var/lib/postgresql/data/pgdata
+  PGDATA: /var/lib/postgresql/18/docker/pgdata
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:latest
+          image: postgres:18.0
           envFrom:
             - configMapRef:
                 name: postgres-config
@@ -32,7 +32,7 @@ spec:
             - containerPort: 5432
           volumeMounts:
             - name: postgres-tmp-storage
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/postgresql/18/docker
               subPath: postgresql
               readOnly: false
       volumes:
