--- a/systemtest/pom.xml
+++ b/systemtest/pom.xml
@@ -17,7 +17,24 @@
 
         <!-- Points to the root directory of the Strimzi project directory and can be used for fixed location to configuration files -->
         <strimziRootDirectory>${basedir}${file.separator}..</strimziRootDirectory>
+
+        <!--   Once new version of Test-Frame is released, we need to remove all the deps from here and return it back to the main pom.xml     -->
+        <skodjob.test-frame.version>1.3.0-SNAPSHOT</skodjob.test-frame.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <name>Central Portal Snapshots</name>
+            <id>central-portal-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -232,25 +249,32 @@
             <groupId>io.fabric8</groupId>
             <artifactId>openshift-model-operatorhub</artifactId>
         </dependency>
+        <!-- The skodjob dependency is required at compile time, not solely in the test scope, due to the creation of custom metrics components. -->
         <dependency>
             <groupId>io.skodjob</groupId>
             <artifactId>test-frame-metrics-collector</artifactId>
+            <version>${skodjob.test-frame.version}</version>
         </dependency>
         <dependency>
             <groupId>io.skodjob</groupId>
             <artifactId>test-frame-log-collector</artifactId>
+            <version>${skodjob.test-frame.version}</version>
         </dependency>
         <dependency>
             <groupId>io.skodjob</groupId>
             <artifactId>test-frame-common</artifactId>
+            <version>${skodjob.test-frame.version}</version>
         </dependency>
         <dependency>
             <groupId>io.skodjob</groupId>
             <artifactId>test-frame-kubernetes</artifactId>
+            <version>${skodjob.test-frame.version}</version>
         </dependency>
         <dependency>
             <groupId>io.skodjob</groupId>
             <artifactId>test-frame-openshift</artifactId>
+            <version>${skodjob.test-frame.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.skodjob</groupId>
