Add the `v1` API conversion tool to the Operator container image
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/docker-images/operator/Dockerfile
+++ b/docker-images/operator/Dockerfile
@@ -21,4 +21,7 @@ COPY scripts/ tmp/bin/ bin/
 
 COPY tmp/lib/ lib/
 
+RUN mkdir -p ${STRIMZI_HOME}/../v1-api-conversion
+COPY tmp/v1-api-conversion/ ../v1-api-conversion/
+
 USER 1001
